--- a/styles.css
+++ b/styles.css
@@ -1628,7 +1628,7 @@ footer {
 
 /* Default focus outline style */
 :focus {
-    outline: 2px solid #4CAF50; /* Example: Green outline */
+    outline: 2px solid #0000FF; /* Example: Blue outline */
 }
 
 /* If the 'focus-outline-disabled' class is added to the body, remove the outline */
